--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -158,3 +158,14 @@ nav a:hover {
 .btn-curr-page {
     font-size: 1.2em;
 }
+
+.sort-container {
+    display: flex;
+    justify-content: center;
+    gap: .5em;
+    margin-block: 1em;
+}
+
+.btn-toggle {
+    margin-block-start: 1em;
+}
