--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -169,3 +169,32 @@ nav a:hover {
 .btn-toggle {
     margin-block-start: 1em;
 }
+
+.labels-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 50vw;
+}
+
+
+/* Edit */
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .3em;
+
+    margin-block-end: .5em;
+}
+
+.input-container input {
+    width: 350px;
+    line-height: 1.5em;
+}
+
+.input-container input[type='number'] {
+    width: 100px;
+}
