--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -1,8 +1,13 @@
-body {
-    margin: auto;
-    font-size: 20px;
+*,
+*::before,
+*::after {
+    box-sizing: border-box
 }
 
+body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 header {
     background-color: lightskyblue;
@@ -197,4 +202,37 @@ nav a:hover {
 
 .input-container input[type='number'] {
     width: 100px;
+}
+
+/* Header */
+
+
+.app-header h1 {
+    text-align: center;
+    margin-block: .3em;
+}
+
+/* User */
+
+.user-authentication {
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
+
+.login-form {
+    display: flex;
+    gap: .5em;
+    margin-block: .5em;
+}
+
+.btns {
+    text-align: center;
+}
+
+/* Misc */
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
