--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -1,238 +1,29 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box
-}
+/* Setup */
+@import "setup/vars.css";
+@import "setup/typography.css";
 
-body {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+/* Base */
+@import "base/base.css";
+@import "base/helpers.css";
+@import "base/layout.css";
+@import "base/forms.css";
 
-header {
-    background-color: lightskyblue;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+/* Components */
+@import "cmps/AppHeader.css";
+@import "cmps/AppFooter.css";
+@import "cmps/UserMsg.css";
+@import "cmps/ToggleButton.css";
+@import "cmps/Chart.css";
+@import "cmps/DataTable.css";
+@import "cmps/FancyBox.css";
+@import "cmps/SplitPane.css";
+@import "cmps/ProgressBar.css";
 
-.main-app {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
+@import "cmps/TodoFilter.css";
+@import "cmps/TodoPagination.css";
+@import "cmps/TodoList.css";
+@import "cmps/TodoPreview.css";
+@import "cmps/TodoDetails.css";
+@import "cmps/TodoEdit.css";
 
-main {
-    flex-grow: 1;
-    text-align: center;
-
-}
-
-footer {
-    background-color: lightskyblue;
-    padding: 5px;
-    margin: 10px 0 0;
-    text-align: center;
-}
-
-nav a {
-    display: inline-block;
-    margin: 3px;
-    padding: 10px;
-    border-bottom: 1px solid transparent;
-    text-decoration: none;
-}
-
-nav a:hover {
-    border-bottom: 1px solid whitesmoke;
-    text-decoration: overline;
-    color: whitesmoke;
-}
-
-.main-title {
-    text-align: center;
-    color: rgba(36, 7, 7, 0.685);
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-.user-msg {
-    color: white;
-    padding: 10px;
-    font-size: 1.4em;
-    position: fixed;
-    top: 0;
-    right: 0;
-    background-color: grey;
-}
-
-.user-msg button {
-    float: right;
-    border: 0;
-    border-radius: 50%;
-    margin: 5px;
-}
-
-.success {
-    background-color: rgb(41, 189, 73);
-}
-
-.danger {
-    background-color: rgb(216, 59, 59);
-}
-
-
-.bug-list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-items: end;
-}
-
-.bug-preview {
-    background-color: #333;
-    color: whitesmoke;
-    border-radius: .2em;
-    margin: 5px;
-    text-align: center;
-    padding: 5px;
-}
-
-.bug-preview a {
-    color: lightskyblue;
-}
-
-.bug-preview span {
-    color: gold;
-}
-
-.info-actions h3 {
-    margin-block-end: .5em;
-}
-
-.container {
-    padding-inline: 8rem;
-}
-
-.filtering h3 {
-    margin-block-end: 0;
-}
-
-.filter-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: .2em;
-}
-
-.filter-container * {
-    line-height: 1.5em;
-}
-
-.filter-container * {
-    width: 100px;
-}
-
-.pagination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: .3em;
-}
-
-.pagination .btn {
-    color: antiquewhite;
-    background-color: #333;
-    border: 1px solid black;
-    border-radius: 8px;
-}
-
-.pagination .btn:not(.btn-curr-page) {
-    font-size: .9em;
-}
-
-.pagination .btn:not(.btn-curr-page):hover {
-    cursor: pointer;
-}
-
-
-.btn-curr-page {
-    font-size: 1.2em;
-}
-
-.sort-container {
-    display: flex;
-    justify-content: center;
-    gap: .5em;
-    margin-block: 1em;
-}
-
-.btn-toggle {
-    margin-block-start: 1em;
-}
-
-.labels-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 50vw;
-}
-
-
-/* Edit */
-
-.input-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: .3em;
-
-    margin-block-end: .5em;
-}
-
-.input-container input {
-    width: 350px;
-    line-height: 1.5em;
-}
-
-.input-container input[type='number'] {
-    width: 100px;
-}
-
-/* Header */
-
-
-.app-header h1 {
-    text-align: center;
-    margin-block: .3em;
-}
-
-/* User */
-
-.user-authentication {
-    display: flex;
-    flex-direction: column;
-    gap: .5em;
-}
-
-.login-form {
-    display: flex;
-    gap: .5em;
-    margin-block: .5em;
-}
-
-.btns {
-    text-align: center;
-}
-
-/* Misc */
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
+@import "cmps/UserDetails.css";
